{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 11,
  "lineage": "d72161bd-45b0-875c-2bdb-4c0fbb1c7973",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:subnet/subnet-067eec1018ecec836",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 249,
            "cidr_block": "10.10.1.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "kurs05-vk-subnet-01"
                ]
              }
            ],
            "id": "subnet-067eec1018ecec836",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936026591534",
            "state": "available",
            "tags": {
              "Description": "Public subnet-01 for kurs05-vk VPC",
              "Environment": "day-02",
              "Name": "kurs05-vk-subnet-01"
            },
            "vpc_id": "vpc-0ea68558ebb15628a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "kurs05-vk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:vpc/vpc-0ea68558ebb15628a",
            "cidr_block": "10.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0087f4512dd164144",
                "cidr_block": "10.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-008bcc68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "kurs05-vk"
                ]
              }
            ],
            "id": "vpc-0ea68558ebb15628a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a6f843a021fa5adc",
            "owner_id": "936026591534",
            "state": "available",
            "tags": {
              "Description": "Example public private VPC",
              "Environment": "day-02",
              "Name": "kurs05-vk"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpn-lola",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a0e33d3c1c5fb82",
            "arn": "arn:aws:ec2:eu-central-1:936026591534:instance/i-0d04454b2174594c4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d04454b2174594c4",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "lola-ovpn",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0140893089d5ad0a5",
            "private_dns": "ip-10-10-1-5.eu-central-1.compute.internal",
            "private_ip": "10.10.1.5",
            "public_dns": "ec2-54-93-183-112.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.93.183.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c9b0b4676df82485",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067eec1018ecec836",
            "tags": {
              "Description": "Instance lola",
              "Environment": "day-02",
              "Name": "lola"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05eb60caff0eb533a"
            ]
          },
          "dependencies": [
            "aws_key_pair.lola-ovpn",
            "aws_security_group.lola",
            "data.aws_ami.bionic",
            "data.aws_subnet.public",
            "data.aws_vpc.kurs05-vk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lola",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:security-group/sg-05eb60caff0eb533a",
            "description": "Allow basic access from external",
            "egress": [],
            "id": "sg-05eb60caff0eb533a",
            "ingress": [],
            "name": "lola-external-access",
            "name_prefix": "",
            "owner_id": "936026591534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Security Group lola for external access",
              "Environment": "day-02",
              "Name": "lola-external-access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea68558ebb15628a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.kurs05-vk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_icmp_echo_request",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8,
            "id": "sgrule-2636910594",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-05eb60caff0eb533a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lola",
            "data.aws_vpc.kurs05-vk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_tcp_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 1,
            "id": "sgrule-2087207742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05eb60caff0eb533a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65234,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lola",
            "data.aws_vpc.kurs05-vk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_icmp_echo_request",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8,
            "id": "sgrule-1821470312",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-05eb60caff0eb533a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lola",
            "data.aws_vpc.kurs05-vk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_tcp_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2965158506",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05eb60caff0eb533a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lola",
            "data.aws_vpc.kurs05-vk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_udp_openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 1194,
            "id": "sgrule-3920554077",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-05eb60caff0eb533a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1194,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lola",
            "data.aws_vpc.kurs05-vk"
          ]
        }
      ]
    }
  ]
}